--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@capacitor/ios": "7.0.1",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
+    "@nuxtjs/device": "^3.2.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "nuxt": "^3.15.3",
     "postcss": "^8.5.1",
+    "swiper": "^11.2.1",
     "tailwindcss": "^4.0.0",
     "vue": "latest",
     "vue-router": "latest"
