--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
-    "@nuxtjs/ionic": "^0.15.1"
+    "@nuxtjs/ionic": "^0.15.1",
+    "@tailwindcss/vite": "^4.0.0"
   }
 }
