--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "nuxt": "^3.15.3",
+    "nuxt-swiper": "^2.0.0",
     "postcss": "^8.5.1",
     "swiper": "^11.2.1",
     "tailwindcss": "^4.0.0",
