--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
     "@nuxtjs/ionic": "^0.15.1",
-    "@tailwindcss/vite": "^4.0.0"
+    "@tailwindcss/vite": "^4.0.0",
+    "@vue/cli-service": "5.0.8"
   }
 }
