--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "type": "module",
   "scripts": {
     "set-application-password": "echo $MY_FASTLANE_APPLE_PASSWORD && export FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD=$MY_FASTLANE_APPLE_PASSWORD && echo $FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD",
+    "echo-user": "echo $FASTLANE_USER",
+    "upload": "npm run echo-user && fastlane upload --username $FASTLANE_USER",
     "build": "npm run set-application-password && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
-  },
+  }
+  ,
   "dependencies": {
     "@capacitor/android": "7.0.1",
     "@capacitor/app": "7.0.0",
