--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "snacks2school",
   "private": true,
   "type": "module",
   "scripts": {
@@ -28,6 +28,7 @@
     "nuxt": "^3.15.3",
     "nuxt-swiper": "^2.0.0",
     "postcss": "^8.5.1",
+    "stripe": "^17.6.0",
     "swiper": "^11.2.1",
     "tailwindcss": "^4.0.0",
     "vue": "latest",
